Call newInstance() via getDeclaredConstructor()